# project-template

./: .env.example  .example-env  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: 1-download-data.R  1-download-data.py  2-transform-data.R  2-transform-data.py  3-figures.R  3-figures.py  4-analyze-data-and-tabulate-latex.R  4-analyze-data-and-tabulate-word.R  4-analyze-data.R  4-analyze-data.do  4-analyze-data.py  5-data-provenance.R  5-data-provenance.py  run-all.R  run-all.py  run_with_echo.py  setup.R  setup.py  utils.R  utils.py
